--- a/SoftwareLockMass/SoftwareLockMass.csproj
+++ b/SoftwareLockMass/SoftwareLockMass.csproj
@@ -42,12 +42,12 @@
       <HintPath>..\packages\Chemistry.1.0.113\lib\net451\Chemistry.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MassSpectrometry, Version=1.0.94.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpectrometry.1.0.94\lib\net451\MassSpectrometry.dll</HintPath>
+    <Reference Include="MassSpectrometry, Version=1.0.95.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpectrometry.1.0.95\lib\net451\MassSpectrometry.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MathNet.Numerics, Version=3.11.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MathNet.Numerics.3.11.1\lib\net40\MathNet.Numerics.dll</HintPath>
+    <Reference Include="MathNet.Numerics, Version=3.12.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MathNet.Numerics.3.12.0\lib\net40\MathNet.Numerics.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Proteomics, Version=1.0.33.0, Culture=neutral, processorArchitecture=AMD64">
@@ -55,7 +55,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Spectra, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\MassSpectrometry.1.0.94\lib\net451\Spectra.dll</HintPath>
+      <HintPath>..\packages\MassSpectrometry.1.0.95\lib\net451\Spectra.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -87,9 +87,11 @@
     <Compile Include="CalibrationFunctions\LinearCalibrationFunction.cs" />
     <Compile Include="CalibrationFunctions\MedianCalibrationFunction.cs" />
     <Compile Include="CalibrationFunctions\QuadraticCalibrationFunction.cs" />
+    <Compile Include="CalibrationFunctions\FifthCalibrationFunction.cs" />
     <Compile Include="CalibrationFunctions\QuarticCalibrationFunction.cs" />
     <Compile Include="CalibrationFunctions\TrainingPoint.cs" />
     <Compile Include="Calibrators.cs" />
+    <Compile Include="SeparateCalibrationFunction.cs" />
     <Compile Include="TrainingPointsExtractor.cs" />
     <Compile Include="SoftwareLockMassParams.cs" />
     <Compile Include="SoftwareLockMassRunner.cs" />
